# url-base-crud-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-app.yml
app/: __init__.py  database.py  main.py
app/core/: __init__.py  config.py  security.py
app/models/: task.py  user.py
app/schemas/: __init__.py  task.py  user.py
test/: .env.test  conftest.py
test/integration/: test_auth.py  test_change_task.py  test_delete.py  test_get_mul_tasks.py  test_get_tasks_with_pagination.py  test_post_mul_tasks.py  test_switch_task.py
